# wit_imu

./: CMakeLists.txt  README.md  example.cpp  main.cpp  test.cpp
include/: LocalTime.hpp  WitImu.hpp  get_local_time.h
src/: LocalTime.cpp  WitImu.cpp  get_local_time.cpp
test_module/: CMakeLists.txt  test_module.cpp
test_module/wit_module/: wit_sdk
wit_sdk/: CMakeLists.txt
wit_sdk/include/: serial.h
wit_sdk/src/: serial.c  wit_c_sdk.c
